--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -14,6 +14,11 @@
     <style>
         body {
             font-family: 'Sora', sans-serif;
+            background-image: url('{{ url_for('static', filename='images/SL-011719-17920-65.jpg') }}');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center center;
         }
         .navbar-brand {
             font-weight: bold;
