--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -20,6 +20,34 @@
             background-attachment: fixed;
             background-position: center center;
         }
+        
+        /* Global button color scheme */
+        .btn-primary,
+        .btn-success {
+            background-color: #5DBEA3 !important;
+            border-color: #5DBEA3 !important;
+        }
+        
+        .btn-primary:hover,
+        .btn-success:hover {
+            background-color: #4da892 !important;
+            border-color: #4da892 !important;
+        }
+        
+        .btn-outline-primary:hover,
+        .btn-outline-secondary:hover {
+            background-color: #5DBEA3 !important;
+            border-color: #5DBEA3 !important;
+        }
+        
+        .btn-outline-success:hover,
+        .btn-outline-danger:hover,
+        .btn-outline-warning:hover,
+        .btn-outline-info:hover {
+            background-color: #5DBEA3 !important;
+            border-color: #5DBEA3 !important;
+        }
+        
         .navbar-brand {
             font-weight: bold;
             color: #2c3e50 !important;
@@ -52,7 +80,7 @@
         }
         
         footer {
-            background-color: #2c3e50;
+            background-color: #343a40;
             color: white;
             margin-top: 3rem;
         }
@@ -70,7 +98,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">
+            <a class="navbar-brand" href="{{ url_for('landing') }}">
                 <i class="bi bi-database"></i> InvivoDB
             </a>
             
@@ -81,7 +109,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">
+                        <a class="nav-link" href="{{ url_for('dashboard') }}">
                             <i class="bi bi-house"></i> Dashboard
                         </a>
                     </li>
