--- a/src/web/templates/add_animal.html
+++ b/src/web/templates/add_animal.html
@@ -42,6 +42,7 @@
                                     <option value="">Select sex...</option>
                                     <option value="Male">Male</option>
                                     <option value="Female">Female</option>
+                                    <option value="Intersex">Intersex</option>
                                     <option value="Mixed">Mixed</option>
                                 </select>
                             </div>
