--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -152,7 +152,7 @@
                             <i class="bi bi-bug"></i> Add Animal
                         </a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#" onclick="alert('Coming soon!')">
+                        <li><a class="dropdown-item" href="{{ url_for('add_experiment') }}">
                             <i class="bi bi-flask"></i> Add Experiment
                         </a></li>
                         <li><a class="dropdown-item" href="#" onclick="alert('Coming soon!')">
