- Designed the Therapies page to be catalogue with categories, colored badges, and a search bar. - Renamed 'Animals' tab to 'Species Profiles' and created a new species_profiles.html page. - Species Profiles page displays big cards with images, short descriptions, PubMed study counts (last 10 years), and hashtags for synonyms. - Added more species (dog, hamster, macaque) and hashtags, and migration script to add them to the database. - Added and updated scripts for species management and database migrations.

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -115,8 +115,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('animals') }}">
-                            <i class="bi bi-bug"></i> Animals
+                        <a class="nav-link" href="{{ url_for('species_profiles') }}">
+                            <i class="bi bi-bug"></i> Species Profiles
                         </a>
                     </li>
                     <li class="nav-item">
